--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Travaux pratiques pour angularJS",
     "main": "bundle.js",
     "dependencies": {
+        "@uirouter/angularjs": "latest",
         "angular": "1.5.9",
         "angular-bootstrap-npm": "^0.14.3",
         "angular-ui-bootstrap": "^2.0.0",
